--- a/app/src/assets/language/fr.json
+++ b/app/src/assets/language/fr.json
@@ -106,5 +106,6 @@
       "approve_text": "Installer",
       "decline_text": " Peut-être plus tard "
     }
-  }
+  },
+  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
 }
