--- a/app/src/assets/language/ru.json
+++ b/app/src/assets/language/ru.json
@@ -107,5 +107,6 @@
       "approve_text": "Установить",
       "decline_text": "Попозже"
     }
-  }
+  },
+  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
 }
