--- a/app/src/assets/language/uk.json
+++ b/app/src/assets/language/uk.json
@@ -101,5 +101,6 @@
             "approve_text": "Встановити",
             "decline_text": "Пізніше"
         }
-    }
+    },
+    "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
 }
