--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -107,5 +107,6 @@
       "approve_text": "Installera",
       "decline_text": "Kanske senare"
     }
-  }
+  },
+  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
 }
