--- a/app/src/assets/language/cn.json
+++ b/app/src/assets/language/cn.json
@@ -108,5 +108,5 @@
       "decline_text": "以后"
     }
   },
-  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
+  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will not be permanent."
 }
