--- a/app/src/assets/language/es.json
+++ b/app/src/assets/language/es.json
@@ -106,5 +106,5 @@
       "decline_text": "Ahora no"
     }
   },
-  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
+  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will not be permanent."
 }
