--- a/app/src/assets/language/fr.json
+++ b/app/src/assets/language/fr.json
@@ -107,5 +107,5 @@
       "decline_text": " Peut-être plus tard "
     }
   },
-  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
+  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will not be permanent."
 }
