--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -108,5 +108,5 @@
       "decline_text": "Kanske senare"
     }
   },
-  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will now be permanent."
+  "dev_mode_banner_disclaimer": "Fevermap utvecklas ännu. Inskickade data kommer inte att sparas permanent."
 }
