--- a/app/src/assets/language/fi.json
+++ b/app/src/assets/language/fi.json
@@ -96,7 +96,7 @@
       "location_data_invalid": "Syötetty sijaintidata ei ole sallittu.",
       "api_data_invalid": "Rajanpintaan lähetetty data ei ollut kelpaavaa.",
       "gender_not_set": "Sukupuolta ei ole valittu.",
-      "do_not_submit_new_temp_until": "Älä syötä uutta kirjausta ennen "
+      "do_not_submit_new_temp_until": "Älä syötä uutta kirjausta ennen %{dateTime}"
     }
   },
 
