--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -97,7 +97,8 @@
       "fever_temp_value_invalid": "Din febertemperatur är inte giltig.",
       "location_data_invalid": "Den givna platset är inte giltig.",
       "api_data_invalid": "Data som skickades var inte giltiga.",
-      "gender_not_set": "Du har inte valt kön."
+      "gender_not_set": "Du har inte valt kön.",
+      "do_not_submit_new_temp_until": "Do not submit a new temperature until %{dateTime}"
     }
   },
   "dialog": {
