Feat: Chart for fever mapping

--- a/app/src/assets/language/be.json
+++ b/app/src/assets/language/be.json
@@ -3,6 +3,7 @@
   "language": "Мова",
   "fevermap_title": "Fevermap",
   "back": "Назад",
+  "today": "Today",
 
   "landing": {
     "about": "Пра Fevermap",
