--- a/app/src/assets/language/de.json
+++ b/app/src/assets/language/de.json
@@ -3,6 +3,7 @@
   "language": "Sprache",
   "fevermap_title": "Fieberkarte",
   "back": "Zurück",
+  "today": "Today",
 
   "landing": {
     "about": "Über",
