--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -3,6 +3,7 @@
   "language": "Language",
   "fevermap_title": "Fevermap",
   "back": "Back",
+  "today": "Today",
 
   "landing": {
     "about": "About",
