--- a/app/src/assets/language/es.json
+++ b/app/src/assets/language/es.json
@@ -3,6 +3,7 @@
   "language": "Idioma",
   "fevermap_title": "Fevermap",
   "back": "Atrás",
+  "today": "Today",
 
   "landing": {
     "about": "Acerca de",
