--- a/app/src/assets/language/fi.json
+++ b/app/src/assets/language/fi.json
@@ -3,6 +3,7 @@
   "language": "Kieli",
   "fevermap_title": "Fevermap",
   "back": "Takaisin",
+  "today": "Tänään",
 
   "landing": {
     "about": "Tietoa",
