--- a/app/src/assets/language/ru.json
+++ b/app/src/assets/language/ru.json
@@ -3,6 +3,7 @@
   "language": "Язык",
   "fevermap_title": "Fevermap",
   "back": "Назад",
+  "today": "Today",
 
   "landing": {
     "about": "О Fevermap",
