--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -3,6 +3,7 @@
   "language": "Språk",
   "fevermap_title": "Fevermap",
   "back": "Back",
+  "today": "Today",
 
   "landing": {
     "about": "Om Fevermap",
