--- a/app/src/assets/language/uk.json
+++ b/app/src/assets/language/uk.json
@@ -3,6 +3,8 @@
     "language": "Мова",
     "fevermap_title": "Fevermap",
     "back": "Тому",
+    "today": "Today",
+
     "landing": {
         "about": "Про Fevermap",
         "about_title": "Що таке Fevermap?",
