Update be.json: correction of some grammatical errors and typos

--- a/app/src/assets/language/be.json
+++ b/app/src/assets/language/be.json
@@ -12,13 +12,13 @@
     "about": "Пра Fevermap",
     "about_title": "Што такое Fevermap?",
     "about_content_explanation": " гэта прыкладанне і сайт, створаныя для збору дадзеных пра распаўсюджанне пандэміі каронавіруснай інфекцыі COVID-19 у рэальным часе.",
-    "about_current_methods": "Метады ўліку распаўсюджанасці каронавіруса, якія выкарыстоўваюцца зара, не даюць поўнай карціны пандэміі. Масавае тэставанне не праводзіцца, каб зэканоміць рэсурсы для тых, каму яны найбольш патрэбныя.",
+    "about_current_methods": "Метады ўліку распаўсюджанасці каронавіруса, якія выкарыстоўваюцца зараз, не даюць поўнай карціны пандэміі. Масавае тэставанне не праводзіцца, каб з'эканоміць рэсурсы для тых, каму яны найбольш патрэбныя.",
     "about_solution": "Fevermap — рашэнне гэтай праблемы. З дапамогай Fevermap чалавек у любой кропцы планеты можа ананімна паведаміць пра наяўнасць у яго тэмпературы і іншых сімптомаў. Такім чынам, мы зможам ацэньваць рэальную распаўсюджанасць каронавіруснай інфекцыі COVID-19 у рэальным часе і забяспечваць адказныя органы дадзенымі, якія дапамогуць ім аператыўна прымаць дакладныя, заснаваныя на дадзеных, рашэнні пра ахоўныя меры.",
-    "about_data_collection": "Дадзеныя, якія збірае Fevermap, абезаблічаны і будуць выкарыстоўвацца для павілічэння асвядомленасці  пра бягучую сусветнуюсітуацыю.",
+    "about_data_collection": "Дадзеныя, якія збірае Fevermap, абезаблічаны і будуць выкарыстоўвацца для павілічэння асвядомленасці  пра бягучую сусветную сітуацыю.",
     "about_current_participant_count": "На сёння %{participantCount} карыстальнікаў праінфармавалі пра свае сімптомы пры дапамозе Fevermap. ",
 
     "how_to_participate": "Як я магу удзельнічаць?",
-    "participation_info": "Гэта лёгка. Вымерце сваю тэмпературу і ўвядзіце атрыманы вынік. Паведаміце таксама дадатковую інфармацыю, неабходную для статыстыкі — ваш год нараджэння і паштовы індэкс..",
+    "participation_info": "Гэта лёгка. Вымерце сваю тэмпературу і ўвядзіце атрыманы вынік. Паведаміце таксама дадатковую інфармацыю, неабходную для статыстыкі — ваш год нараджэння і паштовы індэкс.",
     "info_disclaimer": "Мы не задаём пытанняў, якія могуць прывесці да выяўлення вашай асобы. Мы паважаем вашую канфедэнцыяльнасць і ананімнасць.",
 
     "how_will_my_data_be_used": "Як будуць выкарыстоўвацца мае дадзеныя?",
@@ -60,7 +60,7 @@
       "country": "Краіна",
       "postal_code": "Паштовы індэкс",
       "location_determination_subtitle": "Месцазнаходжанне вызначаецца з дапамогай API прыкладання. Калі ласка, дазваольце прыкладанню атрымліваць звесткі пра ваша месцазнаходжанне.",
-      "location_change_subtitle": "Для абнаўлення месцазнаходжання абнавіце краіну і паштовы індэкс ці націсніце кнопку ніжэй.",
+      "location_change_subtitle": "Для абнаўлення месцазнаходжання абярыце краіну і увядзіце паштовы індэкс ці націсніце кнопку ніжэй.",
       "update_location": "Абнавіць месцазнаходжанне ",
       "use_gps": "Атрымаць месцазнаходжанне ад GPS",
       "set_location_and_submit": "Пазначыць месцазнаходжанне і адправіць дадзеныя "
