Add link to Gitlab on how to report bugs in development banner
We want beta testers to report their findings, thus ensure the link to
Gitlab issues page is prominent. Also remove the string from translations,
since translations can't have links and anyway the string is not relevant
for translations and actual end users.

Also make Fevermap logo a link to fevermap.net and add the link as text
on the about page as well. Not pretty, but I leave it to UI designers
to iterate upon.

--- a/app/src/assets/language/ar.json
+++ b/app/src/assets/language/ar.json
@@ -22,7 +22,7 @@
     "info_disclaimer": "نحن لا نطرح أسئلة قد تؤدي إلى التعرف عليك. نحن نقدر خصوصيتك وإخفاء هويتك.",
 
     "how_will_my_data_be_used": "كيف سيتم استخدام بياناتي؟",
-    "data_use_explanation": "سيتم إخفاء هوية البيانات، ثم سيتم مشاركتها كبيانات مفتوحة من خلال واجهة API.."
+    "data_use_explanation": "سيتم إخفاء هوية البيانات، ثم سيتم مشاركتها كبيانات مفتوحة من خلال واجهة API."
   },
   "entry": {
     "data_entry": "ادخال البيانات",
@@ -112,6 +112,5 @@
       "approve_text": "تثبيت",
       "decline_text": "في وقت لاحق"
     }
-  },
-  "dev_mode_banner_disclaimer": "Fevermap قيد التطوير. البيانات المدرجة لن تكون دائمة."
+  }
 }
