--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -22,7 +22,7 @@
     "info_disclaimer": "We do not ask questions that could lead to you being recognized. We value your privacy and anonymity.",
 
     "how_will_my_data_be_used": "How will my data be used?",
-    "data_use_explanation": "The data will be anonymized, after which it will be shared as open data through API interface.."
+    "data_use_explanation": "The data will be anonymized, after which it will be shared as open data through API interface."
   },
   "entry": {
     "data_entry": "Data entry",
@@ -112,6 +112,5 @@
       "approve_text": "Install",
       "decline_text": "Maybe later"
     }
-  },
-  "dev_mode_banner_disclaimer": "Fevermap is in development mode. The data inserted will not be permanent."
+  }
 }
