Feat: Added new answer possibilities without measuring
- Added possibility to select if you are feverish without measuring temperature
- Added data view arguments for added new selections
- Added Fahrenheit support to chart

--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -39,7 +39,9 @@
       "temperature": "Temperature",
       "how_much": "How much?",
       "degrees_of_fever": "%{degrees} of fever",
-      "not_measured": "Don't know exactly, not measured.",
+      "havent_measured_but": "I haven't measured but...",
+      "feel_healthy": "I feel healthy",
+      "feel_feverish": "I feel feverish",
       "set_temperature": "Set temperature",
       "other_symptoms": "Other symptoms?",
       "choose_all_that_apply": "Choose all that apply",
