--- a/app/src/assets/language/fi.json
+++ b/app/src/assets/language/fi.json
@@ -39,7 +39,9 @@
       "temperature": "Lämpötila",
       "how_much": "Paljonko?",
       "degrees_of_fever": "%{degrees} astetta kuumetta",
-      "not_measured": "En tiedä tarkalleen, en ole mitannut.",
+      "havent_measured_but": "En ole mitannut mutta...",
+      "feel_healthy": "Tunnen oloni terveeksi",
+      "feel_feverish": "Tunnen oloni flunssaiseksi",
       "set_temperature": "Aseta lämpötila",
       "other_symptoms": "Muita oireita?",
       "choose_all_that_apply": "Valitse kaikki sinua koskevat",
