--- a/app/src/assets/language/fi.json
+++ b/app/src/assets/language/fi.json
@@ -114,6 +114,12 @@
       "content": "Fevermap on mahdollista asentaa progressiivisena verkkosovelluksena. Asennettuna sovellus tarjoaa lisätoimintoja kuten parempaa suorituskykyä ja push notifikaatioita (tulossa pian).",
       "approve_text": "Asenna",
       "decline_text": "Ehkä myöhemmin"
+    },
+    "notifications": {
+      "title": "Salli ilmoitukset",
+      "content": "Fevermap haluaisi tarjota sinulle päivittäisen ilmoituksen, joka muistuttaa sinua käymään sovelluksessa ja kertomaan olotilastasi. Sallitaanko ilmoitukset?",
+      "approve_text": "Salli ilmoitukset",
+      "decline_text": "Ei kiitos"
     }
   }
 }
