Swedish language updates

--- a/app/src/assets/language/sv.json
+++ b/app/src/assets/language/sv.json
@@ -39,7 +39,9 @@
       "temperature": "Temperatur",
       "how_much": "Hur hög?",
       "degrees_of_fever": "%{degrees} grader feber",
-      "not_measured": "Vet inte, har inte mätt.",
+      "havent_measured_but": "Jag har inte mätt men...",
+      "feel_healthy": "Jag mår bra",
+      "feel_feverish": "Jag känner mig febrig",
       "set_temperature": "Välj temperatur",
       "other_symptoms": "Andra symptom?",
       "choose_all_that_apply": "Välj alla som stämmer in",
