--- a/app/src/assets/language/fi.json
+++ b/app/src/assets/language/fi.json
@@ -94,6 +94,7 @@
       "location_update": "Sijainti päivitetty onnistuneesti",
       "data_entry": "Kirjaus lisätty onnistuneesti",
       "offline_entry_queued": "Olet offline tilassa. Kirjaus lisätään jonoon.",
+      "entry_send_failed_queued": "Lähetys epäonnistui. Kirjaus asetetaan jonoon.",
       "sync_finished": "Onnistuneesti synkronoitu kirjaukset."
     },
     "error": {
