--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -29,11 +29,12 @@
     "first_entry_disclaimer": "Entries are submitted into the database based on your device. We would appreciate that you submitted your information from the same device every time. This will allow us to monitor your fever status better.",
     "last_submission": "Last submission",
     "submission_period_disclaimer": "To prevent unnecessary data, submissions are restricted to once every 12 hours.",
-    "queued_entries": "You have %{queuedEntries} entries that haven't been yet synced with the server.",
     "sync_now": "Sync now",
     "new_entry": "New entry",
     "first_time_disclaimer": "As this is your first time using Fevermap, we will ask you a few questions first.",
     "these_questions_wont_be_repeated": "These questions won't be repeated on future submissions.",
+    "queued_entries": "You have queued entries",
+    "send_now": "Send now",
     "questions": {
       "what_is_your_temperature": "What's your temperature?",
       "temperature": "Temperature",
