--- a/app/src/assets/language/be.json
+++ b/app/src/assets/language/be.json
@@ -29,11 +29,12 @@
     "first_entry_disclaimer": "Уведзеныя дадзеныя дадаюцца ў базу дадзеных з прывязкай да вашай прылады. Мы будзем удзячныя вам, калі вы будзеце пастаянна адпраўляць дадзеныя з адной і той жа прылады. У такім выпадку мы зможам лепей адсочваць ваш стан.",
     "last_submission": "Апошняя рэгістрацыя",
     "submission_period_disclaimer": "Каб пазбегнуць з’яўлення залішніх дадзеных, вы можаце адпраўляць не больш аднаго паведамлення кожныя 12 гадзін.",
-    "queued_entries": "У вас %{queuedEntries} вымярэнняў, якія яшчэ не адпраўленыя на на сервер.",
     "sync_now": "Сінхарнізаваць",
     "new_entry": "Новае вымярэнне",
     "first_time_disclaimer": "Раз вы карыстаецеся Fevermap упершыню, дазвольце задаць вам некалькі пытанняў.",
     "these_questions_wont_be_repeated": "Мы не будзем задаваць гэтыя пытанні пры наступных рэгістрацыях дадзеных.",
+    "queued_entries": "You have queued entries",
+    "send_now": "Send now",
     "questions": {
       "what_is_your_temperature": "Ваша тэмпература?",
       "temperature": "Тэмпература",
