--- a/app/src/assets/language/it.json
+++ b/app/src/assets/language/it.json
@@ -29,11 +29,12 @@
     "first_entry_disclaimer": "I valori verranno catalogati nel database in base al tuo dispositivo. Si raccomanda l'utilizzo dello stesso dispositivo ogni qualvolta nuovi dati verranno immessi nel sistema. Questo procedimento consente al sistema di monitorare in maniera più efficace.",
     "last_submission": "Ultimo Rilevamento",
     "submission_period_disclaimer": "Affinché non vengano raccolti dati superflui, è permesso il caricamento di un nuovo rilevamento ogni 12 ore.",
-    "queued_entries": "Ci sono %{queuedEntries} rilevamenti che non sono stati ancora sincronizzati con il server.",
     "sync_now": "Sincronizza ora",
     "new_entry": "New entry",
     "first_time_disclaimer": "As this is your first time using Fevermap, we will ask you a few questions first.",
     "these_questions_wont_be_repeated": "These questions won't be repeated on future submissions.",
+    "queued_entries": "You have queued entries",
+    "send_now": "Send now",
     "questions": {
       "what_is_your_temperature": "What's your temperature?",
       "temperature": "Temperature",
