--- a/app/src/assets/language/ru.json
+++ b/app/src/assets/language/ru.json
@@ -29,11 +29,12 @@
     "first_entry_disclaimer": "Введенные данные отправляются в базу данных, с привязкой к вашему устройству. Мы будем вам признательны, если вы будете постоянно отправлять данные с одного и того же устройства. В этом случае мы сможем лучше отслеживать ваше состояние.",
     "last_submission": "Последняя регистрация",
     "submission_period_disclaimer": "Чтобы избежать появления избыточных данных, вы можете отправить не более одного измерения каждые 12 часов.",
-    "queued_entries": "У вас %{queuedEntries} измерений, которые еще не отправлены на сервер.",
     "sync_now": "Синхронизировать",
     "new_entry": "Новое измерение",
     "first_time_disclaimer": "Поскольку это ваше первое использование Fevermap, позвольте задать вам несколько вопросов.",
     "these_questions_wont_be_repeated": "Мы не будем задавать эти вопросы при последующих регистрациях данных.",
+    "queued_entries": "You have queued entries",
+    "send_now": "Send now",
     "questions": {
       "what_is_your_temperature": "Ваша температура?",
       "temperature": "Температура",
