--- a/app/src/assets/language/uk.json
+++ b/app/src/assets/language/uk.json
@@ -27,11 +27,12 @@
         "first_entry_disclaimer": "Введені дані відправляються в базу даних, з прив'язкою до вашого пристрою. Ми будемо вам вдячні, якщо ви будете постійно відправляти дані з одного і того ж пристрою. В цьому випадку ми зможемо краще відстежувати ваше стан.",
         "last_submission": "Остання реєстрація",
         "submission_period_disclaimer": "Щоб уникнути появи надлишкових даних, ви можете відправити не більше одного виміру кожні 12 годин.",
-        "queued_entries": "У вас %{queuedEntries} вимірювань, які ще не відправлені на сервер.",
         "sync_now": "Синхронізувати",
         "new_entry": "Новий вимір",
         "first_time_disclaimer": "Оскільки це ваше перше використання Fevermap, дозвольте задати вам декілька запитань.",
         "these_questions_wont_be_repeated": "Ми не будемо ставити ці питання при наступних реєстраціях даних.",
+        "queued_entries": "You have queued entries",
+        "send_now": "Send now",
         "questions": {
             "what_is_your_temperature": "Ваша температура?",
             "temperature": "Температура",
