Add logic for daily message timer. Still in testing

--- a/app/src/assets/language/en.json
+++ b/app/src/assets/language/en.json
@@ -122,5 +122,14 @@
       "approve_text": "Allow notifications",
       "decline_text": "No please"
     }
+  },
+
+  "notification": {
+    "daily_reminder": {
+      "title": "Good morning! \uD83D\uDE0A",
+      "content": "How are you feeling today?",
+      "healthy": "Healthy",
+      "sick": "Sick"
+    }
   }
 }
